--- a/GreenBridge/greenbridge/package.json
+++ b/GreenBridge/greenbridge/package.json
@@ -17,11 +17,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
+    "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
+    "react-table": "^7.8.0",
     "react-toastify": "^10.0.6",
     "web-vitals": "^2.1.4"
   },
