--- a/GreenBridge/greenbridge/package.json
+++ b/GreenBridge/greenbridge/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
+    "jspdf": "^2.5.2",
     "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
