--- a/Backend/greenbridge/requirements.txt
+++ b/Backend/greenbridge/requirements.txt
@@ -4,6 +4,7 @@ cffi==1.17.1
 charset-normalizer==3.3.2
 cryptography==43.0.1
 defusedxml==0.7.1
+dj-database-url==2.3.0
 dj-rest-auth==6.0.0
 Django==5.1.2
 django-allauth==0.51.0
@@ -11,11 +12,14 @@ django-cors-headers==4.4.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 dnspython==2.6.1
+gunicorn==23.0.0
 idna==3.8
 mongoengine==0.29.1
 oauthlib==3.2.2
+packaging==24.2
 pillow==10.4.0
 psycopg2==2.9.9
+psycopg2-binary==2.9.10
 pycparser==2.22
 PyJWT==2.9.0
 pymongo==3.12.0
@@ -28,5 +32,7 @@ requests-oauthlib==2.0.0
 secure-smtplib==0.1.1
 setuptools==75.2.0
 sqlparse==0.5.1
+typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
+whitenoise==6.8.2
