--- a/GreenBridge/greenbridge/package.json
+++ b/GreenBridge/greenbridge/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
     "react-toastify": "^10.0.6",
+    "recharts": "^2.15.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
