--- a/GreenBridge/greenbridge/.eslintrc.json
+++ b/GreenBridge/greenbridge/.eslintrc.json
@@ -3,7 +3,10 @@
     "react-app"
   ],
   "plugins": [
-    "import"
+    "react",
+    "import",
+    "jsx-a11y",
+    "react-hooks"
   ],
   "rules": {
     "import/no-anonymous-default-export": "off"
