--- a/GreenBridge/greenbridge/package.json
+++ b/GreenBridge/greenbridge/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
@@ -12,6 +12,7 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.2",
     "@mui/x-data-grid": "^7.19.0",
+    "@mui/x-date-pickers": "^7.27.1",
     "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -20,6 +21,7 @@
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "jspdf": "^2.5.2",
     "leaflet": "^1.9.4",
     "razorpay": "^2.9.5",
@@ -38,14 +40,14 @@
     "@babel/core": "^7.24.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-react": "^7.23.3",
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "ajv": "^8.12.0",
-    "ajv-keywords": "^5.1.0",
     "schema-utils": "^4.2.0"
   },
   "scripts": {
