--- a/GreenBridge/greenbridge/package.json
+++ b/GreenBridge/greenbridge/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.1.1",
+    "@mui/lab": "^6.0.0-beta.31",
     "@mui/material": "^6.1.2",
     "@mui/x-data-grid": "^7.19.0",
     "@mui/x-date-pickers": "^6.18.6",
