--- a/GreenBridge/greenbridge/package.json
+++ b/GreenBridge/greenbridge/package.json
@@ -21,12 +21,15 @@
     "@turf/turf": "^7.2.0",
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.8",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.5.0",
     "jspdf": "^2.5.2",
     "leaflet": "^1.9.4",
     "razorpay": "^2.9.5",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
